Replace all obvious deprecations.